tests/dataset/tpc-ds/compiler/go/q10.error
go run error: exit status 1
# command-line-arguments
/tmp/TestGoCompiler_TPCDSq102972717812/001/main.go:351:2: syntax error: unexpected name TypeOf after top level declaration
